--- a/html/wp-content/themes/678studio/style.css
+++ b/html/wp-content/themes/678studio/style.css
@@ -8287,7 +8287,7 @@ select:active {
 }
 .store-basic-info-section-mobile__vertical-title {
   position: sticky;
-  left: calc(10px * 100vw / 380px);
+  left: 0;
   top: calc(80px * 100vw / 380px);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -8300,13 +8300,14 @@ select:active {
   -ms-flex-align: center;
   align-items: center;
   gap: calc(12px * 100vw / 380px);
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg) translateX(calc(-10px * 100vw / 380px));
+  transform: rotate(90deg) translateX(calc(-10px * 100vw / 380px));
   -webkit-transform-origin: left top;
   transform-origin: left top;
   z-index: 10;
   -ms-flex-item-align: start;
   align-self: flex-start;
+  margin-left: calc(-10px * 100vw / 380px);
 }
 .store-basic-info-section-mobile__circle {
   font-size: calc(4px * 100vw / 380px);
@@ -8374,10 +8375,17 @@ select:active {
   font-feature-settings: "palt" on;
   margin: 0;
 }
-.store-basic-info-section-mobile__image-container {
-  width: 100vw;
+.store-basic-info-section-mobile__image-area {
+  position: relative;
+  width: calc(100vw - 20px * 100vw / 380px);
   margin-left: calc(-1 * 40px * 100vw / 380px);
   margin-bottom: calc(72px * 100vw / 380px);
+  overflow-x: hidden;
+  overflow-y: visible;
+  height: auto;
+}
+.store-basic-info-section-mobile__image-container {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -8388,7 +8396,7 @@ select:active {
   -ms-flex-align: center;
   align-items: center;
   position: relative;
-  overflow-x: hidden;
+  overflow: visible;
 }
 .store-basic-info-section-mobile__image {
   width: calc(398px * 100vw / 380px);
@@ -8413,8 +8421,8 @@ select:active {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: auto;
   pointer-events: none;
   z-index: 3;
 }
@@ -8858,7 +8866,7 @@ select:active {
 }
 .store-plan-section-mobile__vertical-title {
   position: sticky;
-  left: calc(10px * 100vw / 380px);
+  left: 0;
   top: calc(80px * 100vw / 380px);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -8871,13 +8879,14 @@ select:active {
   -ms-flex-align: center;
   align-items: center;
   gap: calc(12px * 100vw / 380px);
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg) translateX(calc(-10px * 100vw / 380px));
+  transform: rotate(90deg) translateX(calc(-10px * 100vw / 380px));
   -webkit-transform-origin: left top;
   transform-origin: left top;
   z-index: 10;
   -ms-flex-item-align: start;
   align-self: flex-start;
+  margin-left: calc(-10px * 100vw / 380px);
 }
 .store-plan-section-mobile__circle {
   font-size: calc(4px * 100vw / 380px);
@@ -8980,9 +8989,14 @@ select:active {
   font-feature-settings: "palt" on;
   margin: 0;
 }
-.store-plan-section-mobile__image-container {
-  width: 100vw;
+.store-plan-section-mobile__image-area {
+  position: relative;
+  width: calc(100vw - 20px * 100vw / 380px);
   margin-left: calc(-1 * 40px * 100vw / 380px);
+  overflow-x: hidden;
+}
+.store-plan-section-mobile__image-container {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -8993,8 +9007,7 @@ select:active {
   -ms-flex-align: center;
   align-items: center;
   position: relative;
-  overflow-x: hidden;
-  overflow-y: visible;
+  overflow: visible;
 }
 .store-plan-section-mobile__image {
   display: -webkit-box;
@@ -9458,7 +9471,7 @@ select:active {
 }
 .store-access-section-mobile__vertical-title {
   position: sticky;
-  left: calc(10px * 100vw / 380px);
+  left: 0;
   top: calc(80px * 100vw / 380px);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -9471,13 +9484,14 @@ select:active {
   -ms-flex-align: center;
   align-items: center;
   gap: calc(12px * 100vw / 380px);
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg) translateX(calc(-10px * 100vw / 380px));
+  transform: rotate(90deg) translateX(calc(-10px * 100vw / 380px));
   -webkit-transform-origin: left top;
   transform-origin: left top;
   z-index: 10;
   -ms-flex-item-align: start;
   align-self: flex-start;
+  margin-left: calc(-10px * 100vw / 380px);
 }
 .store-access-section-mobile__circle {
   font-size: calc(4px * 100vw / 380px);
